# MealFinder-v2

./: .gitignore  README.md  bundle.js  index.html  location_todo.txt  package-lock.json  package.json  pyproject.toml  todo.txt  webpack.config.js
.netlify/: state.json
app/: main.py
app/core/: limiter.py
app/models/: user.py
app/routers/: auth.py  email.py  portfolio.py
app/schemas/: user.py
app/services/: auth.py  email.py  news.py  stock.py
public/: index.html
src/: App.jsx  index.js  styles.css  verifyDurations.js
src/components/: AccordionList.jsx  AppHeader.js  GeolocationErrorBoundary.jsx  HamburgerMenu.jsx  LocationCard.jsx  LocationList.jsx  MenuContent.jsx
src/data/: location_todo.txt  remaining_locations.js
src/utils/: accordionVerification.js  appheader.txt  sortLocations.js  timeCalculations.js  verifyClosestLocations.js
